* Inventory repository added * Pagination added
