# src/inventory/routes.ts
@@ -30,6 +30,17 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AuthorizationError": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string","required":true},
+            "message": {"dataType":"string","required":true},
+            "stack": {"dataType":"string"},
+            "status": {"dataType":"double","default":401},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "ValidattionError": {
         "dataType": "refObject",
         "properties": {
@@ -67,7 +78,6 @@ export function RegisterRoutes(app: express.Router) {
                     page: {"default":0,"in":"query","name":"page","dataType":"double"},
                     client: {"default":"web","in":"query","name":"client","ref":"Client"},
                     lang: {"default":"en-us","in":"query","name":"lang","ref":"Lang"},
-                    request: {"in":"request","name":"request","required":true,"dataType":"object"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
